--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,18 @@ body {
   line-height: 1;
 }
 
+p {
+  height: 100%;
+  width: 100%;
+}
+
 textarea{
   background: transparent;
   border: none;
   resize: none;
   color: #000000;
+  width: 100%;
   border-left: 1px solid black;
-  padding: 10px;
 }
 
 .jumbotron {
@@ -21,8 +26,9 @@ textarea{
   border-bottom: 10px solid black;
 }
 
-.description{
+.description {
   white-space: pre-wrap;
+  text-align: left;
 }
 
 .time-block{
@@ -69,3 +75,4 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
