--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,8 +71,13 @@ textarea{
   color: white;
 }
 
-.saveBtn i:hover {
+.saveBtn:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
 
+.saveBtn:focus {
+  outline: none;
+  -moz-outline-radius-topright: 15px;
+  -moz-outline-radius-bottomright: 15px;
+}
